# DATN

./: .gitignore
Chaotic/: CMakeLists.txt  main.cpp  main.cxx
Chaotic/include/: ChaoticCypher.h  ChaoticMap.h  ChaoticMap.hxx  Constants.hxx  Hash.h  Hash.hxx  Utils.h  Utils.hxx
Chaotic/src/: ChaoticCypher.cpp  ChaoticCypher.cxx  ChaoticMap.cpp  ChaoticMap.cxx  Constants.cxx  Hash.cpp  Hash.cxx  Utils.cpp  Utils.cxx
ChatApp/app/: build.gradle
Client/: build.gradle.kts  gradle.properties  settings.gradle.kts
Client/account_feature/: build.gradle.kts
Client/app/: build.gradle.kts  google-services.json
Client/base/: build.gradle.kts
Client/chaotic/: build.gradle  build.gradle.kts
Client/chat_feature/: build.gradle.kts
Client/common/: build.gradle.kts
Client/data/: build.gradle.kts
Client/domain/: build.gradle.kts
Client/gradle/wrapper/: gradle-wrapper.properties
Client/remote/: build.gradle.kts
ECDH/: build.gradle.kts  settings.gradle.kts
ECDH/src/main/kotlin/: ECDH.kt  (+1 more)
Server/: .gitignore  package.json  tsconfig.build.json  tsconfig.json
Server/src/: main.ts
Server/src/auth/: auth.controller.ts  auth.service.spec.ts  auth.service.ts  jwt.strategy.ts  local.strategy.ts
Server/src/chat/: chat.gateway.ts
Server/src/configs/: database.config.ts  jwt.config.ts  ormconfig.ts  pino.config.ts
Server/src/ecdh/: ecdh.controller.spec.ts  ecdh.controller.ts
Server/src/modules/: app.module.ts  auth.module.ts  chat.module.ts  database.module.ts  echd.module.ts  user.module.ts
Server/src/security/: ecdh.service.ts  hashing.service.ts  index.ts
(+158 files in other folders)
